changes fix login page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #63e67c; }
+  background: #5f0286; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #550a14; }
+  background: #dea1f6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d1cc10; }
+  background: #4d06b4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ee63d1; }
+  background: #fa0e27; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #74864b; }
+  background: #7dbc5f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cc0ffc; }
+  background: #89cd17; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #dc5dcb; }
+  background: #eb5d43; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c1cf74; }
+  background: #9f78df; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5af795; }
+  background: #11d632; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ce4ae5; }
+  background: #bdebaa; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #159582; }
+  background: #0268da; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ab185e; }
+  background: #73ab60; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e83043; }
+  background: #912cfe; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b643e6; }
+  background: #3d59a6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d23583; }
+  background: #f184a3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e344b2; }
+  background: #43c613; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5a3eeb; }
+  background: #d97614; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8248d7; }
+  background: #3b78e2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f7cb27; }
+  background: #d4d26c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #737f80; }
+  background: #17aa51; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #41c824; }
+  background: #d38bbd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ab1ada; }
+  background: #1a186b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #acb822; }
+  background: #731288; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0f557f; }
+  background: #445b91; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #200e43; }
+  background: #af8995; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7be78d; }
+  background: #3734fd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #643971; }
+  background: #9cbbff; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #879941; }
+  background: #dce689; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3afaa0; }
+  background: #92493a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #29ec69; }
+  background: #7baf85; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #3d4241; }
+  background: #9dd9d7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #444e61; }
+  background: #8c61ba; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9880b2; }
+  background: #981a2a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #028e68; }
+  background: #3f91ab; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #efc045; }
+  background: #fc0a0e; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d9ad60; }
+  background: #ee71d3; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a646cf; }
+  background: #02f198; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #2e3474; }
+  background: #9ccfc6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3ad7e8; }
+  background: #8e0f09; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #447201; }
+  background: #6a6892; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8d0edc; }
+  background: #523108; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6ef12f; }
+  background: #015165; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #958d3b; }
+  background: #2252cf; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6088fd; }
+  background: #631584; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #81882e; }
+  background: #d682ab; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a5e3b2; }
+  background: #8939dc; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f81b84; }
+  background: #ba0bf3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e9b869; }
+  background: #d640fc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0351d1; }
+  background: #99b8cd; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ea70c6; }
+  background: #e6f60c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #dda25f; }
+  background: #d5af19; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4a2d91; }
+  background: #095b8f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #dbcf33; }
+  background: #d0d072; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #870e09; }
+  background: #874206; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #518b67; }
+  background: #8b0bfe; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #fbb631; }
+  background: #39474e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #391dd2; }
+  background: #715738; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #80ecaa; }
+  background: #662ad0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #14cdbc; }
+  background: #131ba7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #56fd85; }
+  background: #450e6c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b0a06c; }
+  background: #b6728e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a2eeee; }
+  background: #e031b6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4e7eff; }
+  background: #0c639d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #cffd5e; }
+  background: #9cf703; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f3b8f7; }
+  background: #bb0864; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4e6724; }
+  background: #7ebe5e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #740523; }
+  background: #094e22; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2315f8; }
+  background: #2ec4d4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #203f8e; }
+  background: #06ebe9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d992bd; }
+  background: #c17f93; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f0a702; }
+  background: #bc423b; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #22b16e; }
+  background: #ddc045; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c94689; }
+  background: #483ac9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a9663e; }
+  background: #57c198; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #013194; }
+  background: #b7730e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6bff28; }
+  background: #7b57a5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3fcf86; }
+  background: #5a2597; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #db64a6; }
+  background: #c5674c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #448a23; }
+  background: #38b2f6; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #03ba0e; }
+  background: #184f0f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bec54f; }
+  background: #f33b79; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #bd8250; }
+  background: #5db175; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6f8e76; }
+  background: #154a48; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b9b040; }
+  background: #d4062a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d0aaa5; }
+  background: #27e7c8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d5fcf6; }
+  background: #15f566; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5409c7; }
+  background: #130a0f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7dc52a; }
+  background: #37f330; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a6fbcb; }
+  background: #7435a8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #45b1c6; }
+  background: #8ece76; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e9a6eb; }
+  background: #154c58; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c68fa8; }
+  background: #60ad27; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8b04fd; }
+  background: #4c3cbe; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #051612; }
+  background: #3c1a1e; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #144de9; }
+  background: #6a296a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #662cae; }
+  background: #5887e0; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #267652; }
+  background: #368aa0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ed7640; }
+  background: #2cfb22; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6abc48; }
+  background: #e96d92; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #80f001; }
+  background: #8a514f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10562,35 +10562,41 @@ input[type="checkbox"] {
   display: block; }
 
 .intro {
+  display: flex;
+  justify-content: center;
   position: relative;
   width: 100%;
-  height: 100vh;
-  padding: 20px 60px 80px; }
+  height: auto;
+  padding: 90px; }
 
 .intro-inner-div {
-  display: flex;
-  align-items: center;
+  width: 960px;
+  min-height: 95vh;
   background: #fff;
-  position: relative;
-  border-radius: 20px;
-  width: 100%;
-  height: 98vh;
+  border-radius: 10px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  /*! display:flex; */
+  flex-wrap: wrap;
+  justify-content: space-between;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19); }
 
 .slider {
-  float: left;
   position: relative;
   width: 50%;
-  height: 100%; }
+  height: 100vh; }
 
 .slider li {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100% 50%;
@@ -10598,7 +10604,7 @@ input[type="checkbox"] {
   transition: clip .7s ease-in-out, z-index 0s .7s;
   clip: rect(0, 100vw, 100vh, 0);
   display: table;
-  border-radius: 20px 0px 0px 20px; }
+  border-radius: 10px 0px 0px 10px; }
 
 .center-y {
   text-align: left;
@@ -10677,8 +10683,7 @@ li.prev {
   text-align: center;
   z-index: 10; }
 
-.right-section-div {
-  float: right;
+.right-panel-div {
   width: 50%; }
 
 .LoginPanel {
@@ -10738,7 +10743,7 @@ select {
 
 .LoginPanel .fieldsSection .userName {
   background: #fff url(../images/icon-user.png) no-repeat 12px center;
-  margin-bottom: 40px; }
+  margin-bottom: 55px; }
 
 .LoginPanel .fieldsSection .password {
   margin-bottom: 10px;
@@ -10757,6 +10762,9 @@ select {
 	background: #fff;
 	width: 12px;*/
   display: none; }
+
+.remember {
+  margin-bottom: 15px; }
 
 .LoginPanel .fieldsBotSection label {
   color: #4c4c4c;
@@ -10779,8 +10787,9 @@ select {
 */
 .or-login-div {
   padding: 6px 0px; }
-  .or-login-div span {
-    padding: 8px; }
+
+.or-login-div span {
+  padding: 8px 8px 20px; }
 
 .LoginPanel .fieldsBotSection .forgotLink {
   color: #8e8e8e;
@@ -11017,10 +11026,9 @@ input[type="submit"] {
   .intro {
     padding: 20px; }
 
-  .right-section-div {
+  .right-panel-div {
     width: 100%;
-    padding: 20px;
-    float: inherit; }
+    padding: 20px; }
 
   .left {
     width: 100%;
