--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -76,10 +76,9 @@
         padding: 20px;
     }
 
-    .right-section-div {
+    .right-panel-div {
         width: 100%;
         padding: 20px;
-        float: inherit;
     }
 
     .left {
