--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5f0286; }
+  background: #c45e49; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #dea1f6; }
+  background: #55c381; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4d06b4; }
+  background: #cc52f3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fa0e27; }
+  background: #fe402f; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7dbc5f; }
+  background: #486dd8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #89cd17; }
+  background: #addb2f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #eb5d43; }
+  background: #384eab; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9f78df; }
+  background: #48b369; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #11d632; }
+  background: #b91e8e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #bdebaa; }
+  background: #879cf5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0268da; }
+  background: #f8c54a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #73ab60; }
+  background: #9049ee; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #912cfe; }
+  background: #76dbf9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3d59a6; }
+  background: #265a58; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f184a3; }
+  background: #f320e6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #43c613; }
+  background: #f00d8b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d97614; }
+  background: #5d46ba; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3b78e2; }
+  background: #ccaa37; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d4d26c; }
+  background: #283eb0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #17aa51; }
+  background: #4323be; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d38bbd; }
+  background: #510dfe; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1a186b; }
+  background: #70e6b3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #731288; }
+  background: #c58c04; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #445b91; }
+  background: #e1eb05; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #af8995; }
+  background: #a862fc; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3734fd; }
+  background: #332ebb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9cbbff; }
+  background: #46af76; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #dce689; }
+  background: #54a305; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #92493a; }
+  background: #927b15; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #7baf85; }
+  background: #45b2f9; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9dd9d7; }
+  background: #855478; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8c61ba; }
+  background: #efcbde; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #981a2a; }
+  background: #83b8e4; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3f91ab; }
+  background: #927916; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fc0a0e; }
+  background: #137e6c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ee71d3; }
+  background: #bc66ac; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #02f198; }
+  background: #98acfb; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9ccfc6; }
+  background: #cb60c9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8e0f09; }
+  background: #bdac89; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6a6892; }
+  background: #f92a92; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #523108; }
+  background: #51cac3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #015165; }
+  background: #38abf7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2252cf; }
+  background: #7d2897; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #631584; }
+  background: #87093c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d682ab; }
+  background: #48b819; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8939dc; }
+  background: #40931a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ba0bf3; }
+  background: #8faad2; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d640fc; }
+  background: #3538bc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #99b8cd; }
+  background: #200b53; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e6f60c; }
+  background: #ff57ac; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d5af19; }
+  background: #4f0868; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #095b8f; }
+  background: #8ca668; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d0d072; }
+  background: #c499a6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #874206; }
+  background: #62c55a; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8b0bfe; }
+  background: #405658; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #39474e; }
+  background: #14f5c9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #715738; }
+  background: #1040c0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #662ad0; }
+  background: #2b847b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #131ba7; }
+  background: #834608; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #450e6c; }
+  background: #19a898; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b6728e; }
+  background: #551334; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e031b6; }
+  background: #657435; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #0c639d; }
+  background: #15e7f7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9cf703; }
+  background: #1bc237; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bb0864; }
+  background: #c9c3dd; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7ebe5e; }
+  background: #ffa86b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #094e22; }
+  background: #271872; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2ec4d4; }
+  background: #8e8962; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #06ebe9; }
+  background: #c1d4ef; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c17f93; }
+  background: #0b9b26; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bc423b; }
+  background: #cedd55; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ddc045; }
+  background: #e7c545; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #483ac9; }
+  background: #eabcc9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #57c198; }
+  background: #a5aac1; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b7730e; }
+  background: #17f812; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7b57a5; }
+  background: #52b49b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #5a2597; }
+  background: #b63e17; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c5674c; }
+  background: #f8cee9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #38b2f6; }
+  background: #326dbf; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #184f0f; }
+  background: #4c3f77; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f33b79; }
+  background: #a2bd7b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5db175; }
+  background: #6f9119; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #154a48; }
+  background: #c3400c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d4062a; }
+  background: #4f62d3; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #27e7c8; }
+  background: #322787; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #15f566; }
+  background: #76210c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #130a0f; }
+  background: #acb97c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #37f330; }
+  background: #f3f69c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7435a8; }
+  background: #8a075c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8ece76; }
+  background: #ac9b4a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #154c58; }
+  background: #1f693e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #60ad27; }
+  background: #e74498; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4c3cbe; }
+  background: #62cbfd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3c1a1e; }
+  background: #ee6e52; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6a296a; }
+  background: #711956; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5887e0; }
+  background: #e6a0a2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #368aa0; }
+  background: #43d01d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #2cfb22; }
+  background: #22b337; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e96d92; }
+  background: #b21d8e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8a514f; }
+  background: #4ffa3c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10564,6 +10564,7 @@ input[type="checkbox"] {
 .intro {
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
   width: 100%;
   height: auto;
