--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -6,6 +6,7 @@
 .intro {
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
     width: 100%;
     height: auto;
