--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c45e49; }
+  background: #64f46e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #55c381; }
+  background: #c8c82e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #cc52f3; }
+  background: #194d73; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fe402f; }
+  background: #58b923; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #486dd8; }
+  background: #5657ba; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #addb2f; }
+  background: #aacc2f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #384eab; }
+  background: #818a78; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #48b369; }
+  background: #13456a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b91e8e; }
+  background: #ef4e90; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #879cf5; }
+  background: #b69627; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f8c54a; }
+  background: #c957aa; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #9049ee; }
+  background: #49ec26; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #76dbf9; }
+  background: #c02a98; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #265a58; }
+  background: #88e9ea; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f320e6; }
+  background: #0e7d91; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f00d8b; }
+  background: #17e842; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5d46ba; }
+  background: #8b24f8; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ccaa37; }
+  background: #fb3e9a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #283eb0; }
+  background: #789b81; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4323be; }
+  background: #ab3bff; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #510dfe; }
+  background: #73c603; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #70e6b3; }
+  background: #399659; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c58c04; }
+  background: #f20d5d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e1eb05; }
+  background: #5f826d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a862fc; }
+  background: #76ff91; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #332ebb; }
+  background: #655b5e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #46af76; }
+  background: #7552ed; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #54a305; }
+  background: #42a8f2; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #927b15; }
+  background: #aee640; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #45b2f9; }
+  background: #80661c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #855478; }
+  background: #f068ce; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #efcbde; }
+  background: #34bb09; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #83b8e4; }
+  background: #371e66; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #927916; }
+  background: #db82b2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #137e6c; }
+  background: #dc91af; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bc66ac; }
+  background: #06b731; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #98acfb; }
+  background: #43e659; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #cb60c9; }
+  background: #a4e51e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bdac89; }
+  background: #ea4761; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f92a92; }
+  background: #a1e4a8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #51cac3; }
+  background: #ea965c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #38abf7; }
+  background: #e8d81b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7d2897; }
+  background: #b06cd2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #87093c; }
+  background: #8bc6c8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #48b819; }
+  background: #97caa0; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #40931a; }
+  background: #81dab2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #8faad2; }
+  background: #74d79d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3538bc; }
+  background: #24d989; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #200b53; }
+  background: #e7afb2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ff57ac; }
+  background: #526de4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4f0868; }
+  background: #b4cb8d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8ca668; }
+  background: #d6e5c7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c499a6; }
+  background: #811104; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #62c55a; }
+  background: #68c5d1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #405658; }
+  background: #dfde41; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #14f5c9; }
+  background: #545f3a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1040c0; }
+  background: #8b07f1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #2b847b; }
+  background: #33f7b6; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #834608; }
+  background: #31ffad; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #19a898; }
+  background: #9c1be0; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #551334; }
+  background: #ad6f0a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #657435; }
+  background: #09bf09; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #15e7f7; }
+  background: #b80e23; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1bc237; }
+  background: #b8f910; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c9c3dd; }
+  background: #5fb7e7; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ffa86b; }
+  background: #138bea; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #271872; }
+  background: #779c78; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8e8962; }
+  background: #9a8261; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c1d4ef; }
+  background: #76b7e6; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0b9b26; }
+  background: #afd637; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #cedd55; }
+  background: #fad861; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e7c545; }
+  background: #4c4584; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #eabcc9; }
+  background: #f52ec3; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a5aac1; }
+  background: #132e71; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #17f812; }
+  background: #fffe7d; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #52b49b; }
+  background: #2559be; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b63e17; }
+  background: #9553d9; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f8cee9; }
+  background: #1fd028; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #326dbf; }
+  background: #7136cc; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #4c3f77; }
+  background: #1a506c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a2bd7b; }
+  background: #7ad31d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6f9119; }
+  background: #ff8874; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c3400c; }
+  background: #2d3c97; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #4f62d3; }
+  background: #499533; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #322787; }
+  background: #f1ff4e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #76210c; }
+  background: #ae3c93; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #acb97c; }
+  background: #7cdb1b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f3f69c; }
+  background: #759ae6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8a075c; }
+  background: #5fc6c6; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ac9b4a; }
+  background: #479fe3; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1f693e; }
+  background: #b34001; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #e74498; }
+  background: #868742; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #62cbfd; }
+  background: #6f77b7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ee6e52; }
+  background: #e3ee5c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #711956; }
+  background: #3bc987; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e6a0a2; }
+  background: #2c0209; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #43d01d; }
+  background: #b49f8b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #22b337; }
+  background: #8f5122; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b21d8e; }
+  background: #d24497; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4ffa3c; }
+  background: #618c85; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10583,6 +10583,7 @@ input[type="checkbox"] {
   /*! display:flex; */
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19); }
